src/features/Container/Protocols/protocols.scss
.protocol_data_container {
  border-top: 1px solid #d9d9d9;
  margin-top: 10px;
}

.overview-card {
  margin-top: -12px;
}
.protocols {
  > div.p-rl-20:first-child {
    padding-left: 16px;
  }
  .protocol-breadcrumb {
    margin-bottom: 0;
    padding-inline-start: 0;
  }

  margin-top: 48px;
  // max-width: 1200px;

  .p-rl-20 {
    padding-left: 20px;
    padding-right: 20px;
    display: flex;
  }
  .protocol-source-column,
  .protocol-digitize-column {
    border: none;
    .panel-heading {
      padding: 15px 15px 15px 20px !important;
      font-weight: 600;
    }
  }
  .protocol-source-column {
    .panel-heading {
      margin-left: 10px;
    }
  }
  .br-cr-protocol {
    color: #333;
  }
  .protocol-title span {
    font-size: 12px;
    margin-top: 10px;
    margin-bottom: 10px;
    // display: block;
  }
  .view-wrapper {
    html {
      scroll-behavior: smooth;
    }
    table {
      border-collapse: collapse;
      width: 100%;
      font-size: 12px;
    }
    table tbody tr td {
      padding: 5px;
      width: 1%;
    }
    thead {
      display: none;
    }
    table tbody tr th:first-child {
      display: none;
    }
    #SUM {
      // thead {
      //   display: table-header-group;
      // }
      table tbody tr th:first-child {
        display: table-header-group;
      }
    }
    h1 {
      padding: 5px;
      margin-top: 50px;
      margin-bottom: 2%;
      width: 100%;
      background-color: lightgrey;
      font-size: 16px;
    }
    h2 {
      padding: 5px;
      margin-top: 30px;
      margin-bottom: 2%;
      width: 100%;
      background-color: rgb(211 211 211 / 50%);
      font-size: 14px;
    }
    h3,
    h4,
    h5,
    h6 {
      padding: 5px;
      margin-top: 30px;
      margin-bottom: 2%;
      width: 100%;
      background-color: rgb(211 211 211 / 30%);
      font-size: 14px;
    }
    .panel_group {
      display: flex;
      padding: 1px;
      box-sizing: content-box;
      width: 100%;
    }

    .pdf_container {
      justify-content: center;
      overflow-y: scroll;
      height: calc(100vh - 210px);
      outline: none;
      margin-left: 10px;
    }
  }

  h1,
  h2,
  h3,
  h4 {
    margin-top: 0px;
    margin-bottom: 0px;
  }
  .d-flex-100 {
    display: flex;
    width: 100%;
  }
  h2.header {
    color: #333;
    margin-top: 10px;
    margin-left: 9px;
  }
  .tab-column {
    display: flex;
    flex-direction: column;
    .tabs-wrapper {
      flex: 1;
    }
    .overview {
      margin-left: 9px;
      margin-top: 10px;
      width: 100%;
      .MuiTab-root {
        font-size: 14px;
        margin-right: 0;
        padding: 6px 14px;
        border: 0px solid white;
        min-height: 10px;
        opacity: 0.5;
        border-bottom-width: 4px;
        --tw-border-opacity: 0;
        border-color: rgb(10, 149, 235);
      }
      .MuiTab-textColorInherit.Mui-selected {
        opacity: 1;
      }
      .MuiTabs-indicator {
        display: none;
      }
      .MuiTabs-root::before {
        border: none;
      }
      .tab-container {
        display: flex;
        flex-direction: row;
        margin-top: 0px;
      }
      &.tab-card {
        flex: 3;
        height: max-content;
        .protocol-title div:first-child {
          font-size: 14px;
          margin-top: 10px;
        }
        .protocol-title div:last-child {
          font-size: 12px;
          margin-top: 10px;
          margin-bottom: 10px;
        }
        .card-header {
          font-size: 16px;
          margin: 0;
        }
        .data-container {
          display: flex;
          flex-direction: row;
          margin-top: 15px;
          .column-6-12 {
            flex: 1;
          }
          .row-item {
            display: flex;
            font-size: 12px;
            margin-bottom: 8px;
            label {
              flex: 1;
            }
            span {
              flex: 1;
            }
          }
        }
      }
      .chart-column {
        flex: 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        margin-left: 10px;
        .chart-title {
          font-size: 14px;
          font-weight: 500;
        }
        .recharts-wrapper {
          height: 180px !important;
          width: 180px !important;
          .recharts-surface {
            height: 180px !important;
            width: 180px !important;
          }
        }
      }
    }
  }
  .normal {
    font-weight: normal;
  }
  .thick {
    font-weight: bold;
  }
  .indent {
    margin-left: 10px;
  }
  p {
    margin-bottom: 0;
  }
  .thicker {
    font-weight: 900;
  }
  .dropdown-wrapper {
    width: 100%;
    font-size: 14px;
  }
  .dropdown-item {
    display: block;
    width: auto;
    padding: 0.25rem 1.5rem;
    clear: both;
    font-weight: 400;
    color: #212529;
    text-align: inherit;
    white-space: nowrap;
    background-color: transparent;
    border: 0;
  }
  .dropdown-menu {
    position: absolute;
    top: 100%;
    left: 0;
    z-index: 1000;
    display: block;
    float: left;
    min-width: 14rem;
    margin: 0.125rem 0 0;
    font-size: 14px;
    color: #212529;
    text-align: left;
    list-style: none;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid rgba(0, 0, 0, 0.15);
    border-radius: 0.25rem;
    width: 30%;
    overflow: hidden;
  }
  .sample {
    max-height: 200px;
    overflow-y: auto;
    position: absolute;
    transform: translate3d(185px, 0px, 0px);
    top: -3px;
    left: 9%;
    will-change: transform;
  }
  .show-nav {
    display: block;
  }
  .btn {
    width: 100%;
    padding: 10px;
    border: none;
    color: black;
    text-align: left;
    text-decoration: none;
    display: inline-block;
    font-size: 14px;
    // margin: 4px 2px;
    transition-duration: 0.2s;
    cursor: pointer;
    background: none;
    border-left: 8px solid transparent;
    text-transform: capitalize;
  }

  .btn1:hover,
  .btn1:active,
  .btn1:focus,
  .active {
    border-left: 8px solid #0491f3;
    background-color: #0491f336;
  }
  .index-column {
    flex: 1 1;
    height: max-content;
  }
  .protocol-column {
    flex: 3 1;
    display: flex;
    flex-direction: column;
    height: 50%;
  }
  .view-wrapper {
    position: relative;
    width: 100%;
    display: flex;
    padding-left: 10px;
  }
  .view-wrapper > .panel_group > .react-resizable:last-child {
    width: 100% !important;
    padding-right: 10px;
    float: right;
  }

  .view-wrapper .digitize-panel-content {
    overflow-y: auto;
    height: calc(100vh - 210px);
    width: calc(100% - 22px);
  }

  .view-wrapper .MuiCard-root {
    padding: 0;
  }
  label {
    font-weight: bold;
  }
  .text-capitalize {
    text-transform: capitalize;
  }
}

.sidebar-blade > div > :last-child {
  display: none;
}

.digitized_data_item {
  list-style-type: none;
  flex-direction: row;
  padding: 2px 2px 0 15px;
  position: relative;
}

.digitized_data_item > svg {
  position: absolute;
  height: 18px;
  color: #3b3b3b;
  padding: 15px 15px 15px 0;
}

.digitized_data_item > div {
  margin-bottom: -2px;
  border: 0px;
  border-radius: 0px;
  background-color: rgb(248, 248, 249);
  margin-left: 40px;
}

.digitized_data_item [class*='MuiAccordion-root'] {
  border-left: none;
  border-right: 0;
  border-top: 0;
  border-bottom: 1px solid #e9e9e9;
}

.digitized_data_item .accordion_summary {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 48px;
}

.digitized_data_item .accordion_summary_icons {
  display: flex;
  flex-direction: row;
  width: 60px;
  justify-content: space-between;
}

.digitized_data_item [class*='MuiAccordionSummary-root'] {
  background: #f6f7fb;
}

.digitized_data_item [class*='Accordion-expanded'] {
  background: transparent !important;
}

.digitized_data_item [class*='MuiAccordionDetails-root-'] {
  height: auto;
  overflow: auto !important;
  padding: 0 30px 20px 10px;
  font-size: 16px;
  line-height: 1.4;
  text-align: justify;
  display: flex;
  flex-direction: column;
}

.digitized_data_item .edited-text {
  width: 100%;
}

.digitized_data_item .edited-text input {
  resize: vertical !important;
}

.loader {
  z-index: 1000;
  position: relative;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.accordion_summary_actions {
  display: flex;
  flex-direction: row;
}

.accordion_details {
  width: 80% !important;
  height: auto;
  overflow-x: scroll;
  overflow-y: scroll;
}

.accordion_details_loader {
  height: 40px;
}

